ITSADSSD-19616 Misc changes across monorepo

--- a/packages/body/src/scss/_global.scss
+++ b/packages/body/src/scss/_global.scss
@@ -1,5 +1,7 @@
 // Variables, functions, and mixins
 
+@import "~@uq-uidf/core/src/scss/_global.scss";
+
 // Headings
 $h1-font-size: 2.438rem;
 $h2-font-size: 1.938rem;
