--- a/packages/core/src/scss/_component.scss
+++ b/packages/core/src/scss/_component.scss
@@ -3,6 +3,53 @@
 @import '_global.scss';
 @import '_print.scss';
 
+//
+// Tints
+// Provide an overlay over backgrounds to darken, lighten an image to provide
+// better visual contrast for content.
+// Can be used as extensions on components that accommodate overlaid content.
+%tint {
+  position: relative;
+  overflow: hidden;
+}
+
+%tint-overlay {
+  content: '';
+  height: 100%;
+  left: 0;
+  opacity: .5;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  z-index: 1;
+}
+
+%tint-content {
+  position: relative;
+  z-index: 2;
+}
+
+// Light tint layer provides a white tint.
+%light-tint,
+.light-tint {
+  @extend %tint;
+  &::before {
+      @extend %tint-overlay;
+      background: #fff;
+  }
+}
+
+// Dark tint layer provides a black tint.
+%dark-tint,
+.dark-tint {
+  @extend %tint;
+  background-color: $dark-tint-bg;
+  &::before {
+      @extend %tint-overlay;
+      background: #000;
+  }
+}
+
 // Palettes are colour groups to change all the colours within that wrapper to a specific set.
 //
 // Components that set their own element colours may need palette @extend added to them to override specificity. e.g.
@@ -117,17 +164,6 @@
 // Icons
 // Custom and contrib icon sets
 //
-
-// Font Awesome icon set
-// http://fortawesome.github.io/Font-Awesome/
-
-// Font Awesome settings
-// @see global/variables
-@import "~font-awesome/scss/font-awesome";
-
-// UQ Icon settings
-// @see global/variables
-@import "../fonts/uq-icons/scss/uq-icons";
 
 // Create icon font stack to allow multiple sets to use the same prefix class
 // Remove if prefix classes are different.
