--- a/packages/form/src/scss/_global.scss
+++ b/packages/form/src/scss/_global.scss
@@ -1,6 +1,6 @@
 // Variables, functions, and mixins
 
-@import '~foundation-sites/scss/foundation/components/forms';
+@import "~@uq-uidf/button/src/scss/_global.scss";
 
 // Forms
 $form-required-color: #d6492a;
