--- a/packages/alert/src/scss/_component.scss
+++ b/packages/alert/src/scss/_component.scss
@@ -1,173 +1,167 @@
 @import '_global.scss';
 
-// Extends Foundation 5 .alert-box styles.
-// See also Foundation variables set in global/_variables.scss
-//
-// Variants:
-// .alert-box--fixed-bottom - Sticks the alert-box to the bottom of the window and stays there as the user scrolls.
-// .alert-box--centered - Centres the alert-box to the grid-row width.
-// .alert-box--no-x-padding - Removes x-padding to accommodate a custom or Foundation 5 grid layout within.
+.alert {
+  background-color: $alert-default-bg-color;
+  color: $alert-text-color;
+  font-size: 0;
+  position: relative;
 
-.alert-box {
-  // Hidden by default
-  // Overriding Foundation defaults.
-  border-width: 0;
-  font-size: rem-calc(14px);
-  margin: 0;
-  max-height: 0;
-  overflow-y: hidden;
-  padding: 0;
-  text-align: left;
-  text-indent: -100%;
-  transition: max-height 0.4s ease-in-out;
+  a {
+    color: $alert-text-color;
+    text-decoration: underline;
+    
+    &:hover, &:focus {
+      opacity: 0.5;
+    }
 
-  @media #{$medium-up} {
-    font-size: $alert-font-size;
+    &.button {
+      text-decoration: none;
+
+      &:hover, &:focus {
+        opacity: 1;
+      }
+    }
   }
 
-  &.is-active {
-    // Restore the spacing.
-    // Restore the visibility.
-    border-width: $alert-border-width;
-    max-height: 500px;
-    overflow-y: visible;
-    padding: $alert-padding-top $alert-padding-opposite-direction
-      $alert-padding-bottom $alert-padding-default-float;
-    text-indent: 0;
-  }
-
-  &--fixed-top {
-    left: 0;
-    margin: 0 auto;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 10000;
-  }
-
-  &--fixed-bottom {
-    bottom: 0;
-    left: 0;
-    margin: 0 auto;
-    position: fixed;
-    width: 100%;
-    z-index: 10000;
-  }
-
-  &--centered {
+  &__container {
     @include grid-row;
-    left: 0;
-    right: 0;
-
-    // Filler to run full width of the screen while content is kept centered.
-    &::after {
-      background-color: inherit;
-      border: inherit;
-      display: block;
-      height: 105%;
-      left: -50%;
-      position: absolute;
-      top: -1px;
-      width: 200%;
-      z-index: -1;
-    }
   }
 
-  &--no-x-padding {
-    &.is-active {
-      padding-left: 0;
-      padding-right: 0;
-    }
+  &__message {
+    font-size: $alert-font-size-sm;
+    font-weight: $alert-font-weight;
+    line-height: 1.4;
+    padding: 1rem 5rem 1rem $column-gutter / 2;
   }
 
-  // Close (×) button
-  .close {
+  &__action {
+    @include grid-column($columns: ceil($total-columns / 2), $float: false);
+    padding-bottom: 1.1rem;
+    padding-top: .625rem;
+  }
+
+  &__close {
+    background: inherit;
+    color: $alert-close-color;
+    font-size: 2rem;
     font-weight: 300;
-    line-height: 0.575;
-    margin-top: 0;
-    top: $alert-padding-top;
-
-    @media #{$large-up} {
-      line-height: 0.9;
-      margin-top: -1rem;
-      top: 50%;
-    }
+    line-height: 0.9;
+    opacity: 1;
+    padding: 0 6px 4px;
+    position: absolute;
+    text-decoration: none !important;
+    top: .55rem;
+    right: 1rem;
 
     &:hover {
       text-decoration: none;
     }
-  }
 
-  &.round {
-    .close {
-      line-height: 0.9;
-      margin-top: -1rem;
-      top: 50%;
+    &:focus {
+      text-decoration: underline !important;
+    }
+
+    &:hover, &:focus {
+      opacity: 0.5;
     }
   }
 
-  &.secondary,
-  &.info {
-    .close {
-      color: $alert-font-color-alt;
+  &--has-action {
+    .alert__message {
+      // @include grid-column($columns: floor($total-columns / 2), $float: false);
+      padding-bottom: 0;
     }
   }
 
-  // Buttons
-  \.uq-button {
-    margin-bottom: 0;
-    margin-top: 0.857rem;
-
-    @media #{$medium-up} {
-      margin-top: 0;
+  &--no-close {
+    .alert__message {
+      padding-right: $column-gutter / 2;
+    }
+    &.alert--has-action {
+      .alert__action {
+        padding-right: $column-gutter / 2;
+      }
     }
   }
 
-  // Message-action layout
-  &__message-action {
-    @include grid-row;
-    font-size: 0;
+  &--info {
+    background-color: $alert-info-bg-color;
+  }
 
+  &--success {
+    background-color: $alert-success-bg-color;
+  }
+
+  &--warning {
+    background-color: $alert-warning-bg-color;
+  }
+
+  &--danger {
+    background-color: $alert-danger-bg-color;
+  }
+}
+
+@media #{$medium-up} {
+  .alert {
     &__message,
     &__action {
       display: inline-block;
-      font-size: rem-calc(14px);
       vertical-align: middle;
     }
 
     &__message {
-      @include grid-column($columns: $total-columns, $float: false);
+      font-size: $alert-font-size-md;
+      padding: 1.2rem 8rem 1.25rem $column-gutter / 2;
     }
 
     &__action {
-      @include grid-column($columns: ceil($total-columns / 2), $float: false);
+      padding-bottom: .625rem;
+      padding-right: 5rem;
+      width: grid-calc(ceil($total-columns / 3), $total-columns);
     }
 
-    @media #{$medium-up} {
-      &__message,
-      &__action {
-        font-size: $alert-font-size;
-      }
-
-      &__message {
-        width: grid-calc(
-          floor($total-columns - ($total-columns / 4)),
-          $total-columns
-        );
-      }
-
-      &__action {
-        width: grid-calc(ceil($total-columns / 4), $total-columns);
-      }
+    &__close {
+      top: .95rem;
     }
 
-    @media #{$large-up} {
-      &__action {
-        margin-left: grid-calc(
-          ceil(($total-columns / 4) - ($total-columns / 6)),
-          $total-columns
-        );
-        width: grid-calc(ceil($total-columns / 6), $total-columns);
+    &--has-action {
+      .alert__message {
+        padding-bottom: 1.25rem;
+        padding-right: $column-gutter / 2;
+        width: grid-calc(floor($total-columns - ($total-columns / 3)), $total-columns);
+      }
+    }
+    &--slim {
+      .alert__message {
+        padding-bottom: 1.0625rem;
+        padding-top: 1rem;
+      }
+      .alert__close {
+        top: .7rem;
+      }
+    }
+  }
+}
+
+@media #{$large-up} {
+  .alert {
+    &__message {
+      padding: 1.4rem 10.6875rem 1.5rem $column-gutter / 2;
+    }
+
+    &__action {
+      margin-left: grid-calc(floor($total-columns / 12), $total-columns);
+      width: grid-calc(ceil(($total-columns / 12 * 5) - ($total-columns / 12)), $total-columns);
+    }
+
+    &__close {
+      top: 1.15rem;
+    }
+
+    &--has-action {
+      .alert__message {
+        padding-bottom: 1.5rem;
+        width: grid-calc(floor($total-columns - ($total-columns / 12 * 5)), $total-columns);
       }
     }
   }
