ITSADSSD-19614 Refactor header-classic and footer-classic

--- a/packages/footer-classic/component/src/index.html
+++ b/packages/footer-classic/component/src/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-  <uq-footer first="Stencil" last="'Don't call me a framework' JS"></uq-footer>
+  <uq-footer-classic></uq-footer-classic>
 
 </body>
 </html>
