--- a/packages/header-classic/component/src/index.html
+++ b/packages/header-classic/component/src/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-  <uq-header name="UQ Maps" sticky="false"></uq-header>
+  <uq-header-classic>Demo title</uq-header-classic>
 
 </body>
 </html>
