--- a/packages/header-classic/src/scss/_component.scss
+++ b/packages/header-classic/src/scss/_component.scss
@@ -213,7 +213,7 @@
   }
 
   &--mobile {
-    border-bottom: 1px solid $form-input-border-color;
+    border-bottom: 1px solid $search-input-border-color;
     float: left;
     margin: .75rem 1rem;
 
