--- a/packages/storybook-html/src/decorators/section.scss
+++ b/packages/storybook-html/src/decorators/section.scss
@@ -1,8 +1,8 @@
 @import '~@uq-uidf/core/src/scss/_global';
 
 .story-section {
-  padding: 0;
-  margin: 30px;
+  padding: 30px;
+  margin: 0;
   &__heading {
     margin: 0 0 30px 0;
   }
