--- a/packages/tabs/src/scss/_component.scss
+++ b/packages/tabs/src/scss/_component.scss
@@ -38,6 +38,7 @@
     &::-WebKit-scrollbar-thumb {
       background-color: rgba(0, 0, 0, .4);
       border-radius: 4px;
+      box-shadow: 0 0 1px rgba(255, 255, 255, .5);
       -WebKit-box-shadow: 0 0 1px rgba(255, 255, 255, .5);
     }
 
