Move grid menu variables into component

--- a/packages/grid-menu/src/scss/_global.scss
+++ b/packages/grid-menu/src/scss/_global.scss
@@ -1,6 +1,11 @@
 // Variables, functions, and mixins
 @import "~@uq-uidf/core/src/scss/_global.scss";
 
+$linked-list-color: $link-color;
+$linked-list-color-hover: #fff;
+$linked-list-desc: #222;
+$linked-list-desc-hover: #fff;
+
 // Two column layout.
 @mixin grid-menu-2-column {
   @media #{$medium-up}{
