Move footer (classic) variables into component

--- a/packages/footer-classic/src/scss/_global.scss
+++ b/packages/footer-classic/src/scss/_global.scss
@@ -5,3 +5,4 @@
 $site-footer-bg: $uq-dark-purple;
 $site-footer-color: mix(white, $uq-dark-purple, 75%);
 $site-footer-link-color: #fff;
+$site-footer-font-size: 0.875rem;
