--- a/packages/storybook-html/src/components/blockquote/blockquote.scss
+++ b/packages/storybook-html/src/components/blockquote/blockquote.scss
@@ -1,6 +1,11 @@
 @import '~@uq-uidf/core/src/scss/_component';
 @import '~@uq-uidf/blockquote/src/scss/_component';
 
+// Please don't apply random global styles here. You will affect other stories.
+// If you must style a story, please consider scoping to ensure no style 
+// clashes. I.e. prefix the CSS class with .story-blockquote...
+ 
+/*
 section {
     padding: 30px 0px;
 }
@@ -11,3 +16,4 @@ section {
 .background-dark {
     background-color: $uq-purple;
 }
+*/
