--- a/packages/tabs/src/scss/_global.scss
+++ b/packages/tabs/src/scss/_global.scss
@@ -1,1 +1,6 @@
 // Variables, functions, and mixins
+
+$panel-border: #e1e1e1;
+$active-color: #ffa200;
+$app-wrapper: #f8f8f9;
+$tabs-color: #51247a;
