Remove duplicated core styles in Storybook

--- a/packages/footer/src/scss/_global.scss
+++ b/packages/footer/src/scss/_global.scss
@@ -1,3 +1,5 @@
+@import '~@uq-uidf/core/src/scss/_global';
+
 // Variables, functions, and mixins
 $site-footer-color: mix(white, $uq-purple, 75%);
 $site-footer-link-color: #fff;
