--- a/packages/core/src/scss/_global.scss
+++ b/packages/core/src/scss/_global.scss
@@ -192,7 +192,6 @@ $compact-content-color: #767676;
 
 // Foundation stylesheets
 
-@import '~foundation-sites/scss/normalize.scss';
 @import '~foundation-sites/scss/foundation/components/grid';
 @import '~foundation-sites/scss/foundation/components/block-grid';
 @import '~foundation-sites/scss/foundation/components/visibility';
@@ -300,4 +299,78 @@ $xxlarge-up;
             }
         }
     }
+}
+
+
+//
+// Tints
+// Provide an overlay over backgrounds to darken, lighten an image to provide
+// better visual contrast for content.
+// Can be used as extensions on components that accommodate overlaid content.
+%tint {
+  position: relative;
+  overflow: hidden;
+}
+
+%tint-overlay {
+  content: '';
+  height: 100%;
+  left: 0;
+  opacity: .5;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  z-index: 1;
+}
+
+%tint-content {
+  position: relative;
+  z-index: 2;
+}
+
+// Palettes are colour groups to change all the colours within that wrapper to a specific set.
+//
+// Components that set their own element colours may need palette @extend added to them to override specificity. e.g.
+// &.light-palette {
+//   a {
+//     @extend %light-palette;
+//   }
+// }
+//
+
+// Light
+%light-palette {
+  border-color: $light-palette-border-color;
+  color: $light-palette-color;
+
+  a {
+    color: $light-palette-link-color;
+    font-weight: 400;
+
+    &:hover {
+      color: darken($light-palette-link-color,10%);
+    }
+  }
+}
+
+%light-palette-bg {
+  background-color: $light-palette-bg;
+}
+
+// Dark
+%dark-palette {
+  border-color: $dark-palette-border-color;
+  color: $dark-palette-color;
+
+  a {
+    color: $dark-palette-link-color;
+
+    &:hover {
+      color: darken($dark-palette-link-color,10%);
+    }
+  }
+}
+
+%dark-palette-bg {
+  background-color: $dark-palette-bg;
 }
