--- a/packages/lists/src/scss/_global.scss
+++ b/packages/lists/src/scss/_global.scss
@@ -1,4 +1,5 @@
 // Documentation (re: dependencies, version), variables, and mixins go here... for each component
+@import "~@uq-uidf/core/src/scss/_global.scss";
 
 $h3-font-size: 1.438rem;
 $pane-shaded-bg: #f5f5f5;
