--- a/packages/storybook-html/src/components/form/style.scss
+++ b/packages/storybook-html/src/components/form/style.scss
@@ -1,2 +1,1 @@
-@import '~@uq-uidf/core/src/scss/_component';
-@import '~@uq-uidf/form/src/scss/_component';
+@use '~@uq-uidf/form/src/scss/_component';
