Add password reset form example to Storybook

--- a/packages/storybook-html/src/components/form/examples/password-reset.html
+++ b/packages/storybook-html/src/components/form/examples/password-reset.html
@@ -1,5 +1,6 @@
 <div class="row">
   <div class="column small-6">
+    <h1>Choose a new password</h1>
     <div id="errorSummary" role="alert">
       <!-- error summary contents will be populated here -->
     </div>
@@ -7,8 +8,8 @@
       <label for="password" id="passwordLabel" class="form__label">Password</label>
       <input type="password" name="password" id="password" class="form__input" aria-describedby="passwordError passwordStrengthMeterText" />
       <div id="passwordError" aria-live="polite"></div>
-      <div class="password-strength-meter">
-        <div id="passwordStrengthMeter" class="password-strength-meter-indicator" aria-hidden="true">
+      <div class="story-password-strength-meter">
+        <div id="passwordStrengthMeter" class="story-password-strength-meter-indicator" aria-hidden="true">
           <span></span>
           <span></span>
           <span></span>
@@ -17,8 +18,8 @@
         </div>
         <div id="passwordStrengthMeterText" aria-live="polite"></div>
       </div>
-      <div id="passwordStrengthMeterTextTemplate" class="password-strength-meter-text" style="display: none">
-        <span class="password-strength-meter-text-rating"></span>
+      <div id="passwordStrengthMeterTextTemplate" class="story-password-strength-meter-text" style="display: none">
+        <span class="story-password-strength-meter-text-rating"></span>
       </div>
       <label for="confirmPassword" id="confirmPasswordLabel" class="form__label">Confirm password</label>
       <input type="password" name="confirmpassword" id="confirmPassword" class="form__input" aria-describedby="confirmPasswordError" />
