--- a/packages/storybook-html/src/components/form/examples/password-reset.scss
+++ b/packages/storybook-html/src/components/form/examples/password-reset.scss
@@ -48,7 +48,7 @@
     }
   }
   &-warning {
-    margin-bottom: 0.4rem;
+    margin-bottom: .4rem;
   }
   &-suggestions,
   &-sequences {
@@ -58,13 +58,13 @@
     border-width: 1px;
     box-sizing: border-box;
     color: #222222;
-    padding: 0.9rem 1rem 1.2rem 3.1rem;
+    padding: .9rem 1rem 1.2rem 3.1rem;
     position: relative;
     margin: 0;
     &:before {
       display: block;
       font-weight: normal;
-      margin-bottom: 0.4rem;
+      margin-bottom: .4rem;
       margin-left: -2rem;
     }
     @media #{$medium-up} {
