--- a/packages/button/src/scss/_global.scss
+++ b/packages/button/src/scss/_global.scss
@@ -1,1 +1,19 @@
 // Variables, functions, and mixins
+
+@use "~@uq-uidf/core/src/scss/_global.scss" as *;
+
+$button-font: $roboto;
+
+$button-color: #fff;
+$button-hover-color: #fff;
+$button-bg-color: $link-color;
+$button-bg-hover-color: $link-active-color;
+$button-border-color: $link-color;
+$button-border-hover-color: $link-active-color;
+
+$button-secondary-color: #2b2b2b;
+$button-secondary-hover-color: #000000;
+$button-secondary-bg-color: #d7d1cc;
+$button-secondary-bg-hover-color: #bdb0a5;
+$button-secondary-border-color: #d7d1cc;
+$button-secondary-border-hover-color: #bdb0a5;
