--- a/packages/storybook-html/.storybook/preview.scss
+++ b/packages/storybook-html/.storybook/preview.scss
@@ -1,2 +1,7 @@
 @import "~@uq-uidf/core/src/scss/_component";
 @import "~@uq-uidf/body/src/scss/_component";
+
+// Prevent the @uq-uidf/core from imposing a background colour
+body {
+  background-color: transparent !important;
+}
