Fix storybook-html loading of main-menu stylesheet error

--- a/packages/storybook-html/src/components/main-menu/main-menu.scss
+++ b/packages/storybook-html/src/components/main-menu/main-menu.scss
@@ -1,4 +1,4 @@
-@import "@uq-uidf/main-menu/src/scss/_component";
+@import "~@uq-uidf/main-menu/src/scss/_component";
 
 .story-section--main-menu {
   background-color: $uq-purple;
